service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realestate-web
spec:
  selector:
    app: realestate-web
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8000 
  type: ClusterIP
